fix spacing for JF logo on standalone page

--- a/client/src/styles/StandalonePage.scss
+++ b/client/src/styles/StandalonePage.scss
@@ -17,8 +17,14 @@
     }
 
     .jf-logo {
-      color: $justfix-black;
-      height: 1rem;
+      display: flex;
+      @include for-phone-only {
+        margin-top: 1rem;
+      }
+      svg {
+        color: $justfix-black;
+        height: 1rem;
+      }
     }
 
     .standalone-container {
